client/network.yaml
AWSTemplateFormatVersion: 2010-09-09

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties: 
      CidrBlock: 192.168.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      Tags: 
        - Key: Name
          Value: !Sub ${AWS::StackName}/VPC
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}/InternetGateway
  VPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC
  SubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 192.168.0.0/17
      AvailabilityZone: !Select [0, !GetAZs '']
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}/SubnetA
        - Key: kubernetes.io/role/elb
          Value: 1
        - Key: kubernetes.io/cluster/blue-dap
          Value: shared
        - Key: kubernetes.io/cluster/green-dap
          Value: shared
  SubnetB:
    Description: "eksctl requires 2 subnets, could also be used later on to segregate blue and green DaP"
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 192.168.128.0/17
      AvailabilityZone: !Select [1, !GetAZs '']
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}/SubnetB
        - Key: kubernetes.io/role/elb
          Value: 1
        - Key: kubernetes.io/cluster/blue-dap
          Value: shared
        - Key: kubernetes.io/cluster/green-dap
          Value: shared
  RouteTable:
    Type: AWS::EC2::RouteTable
    Properties: 
      Tags: 
        - Key: Name
          Value: !Sub ${AWS::StackName}/RouteTable 
      VpcId: !Ref VPC
  SubnetARouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties: 
      RouteTableId: !Ref RouteTable
      SubnetId: !Ref SubnetA
  SubnetBRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties: 
      RouteTableId: !Ref RouteTable
      SubnetId: !Ref SubnetB
  PublicRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref RouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
  ListenerSG:
    Type: AWS::EC2::SecurityGroup
    Properties: 
      GroupName: !Sub ${AWS::StackName}-listener
      GroupDescription: !Sub ${AWS::StackName}-listener
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          FromPort: 30303
          IpProtocol: tcp
          ToPort: 30303
      VpcId: !Ref VPC
  DiscoverySG:
    Type: AWS::EC2::SecurityGroup
    Properties: 
      GroupName: !Sub ${AWS::StackName}-discovery
      GroupDescription: !Sub ${AWS::StackName}-discovery
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          FromPort: 30303
          IpProtocol: udp
          ToPort: 30303
      VpcId: !Ref VPC
  HttpSG:
    Type: AWS::EC2::SecurityGroup
    Properties: 
      GroupName: !Sub ${AWS::StackName}-http
      GroupDescription: !Sub ${AWS::StackName}-http
      SecurityGroupIngress:
        - CidrIp: 192.168.0.0/17
          FromPort: 8545
          IpProtocol: tcp
          ToPort: 8545
      VpcId: !Ref VPC
  WebSocketSG:
    Type: AWS::EC2::SecurityGroup
    Properties: 
      GroupName: !Sub ${AWS::StackName}-ws
      GroupDescription: !Sub ${AWS::StackName}-ws
      SecurityGroupIngress:
        - CidrIp: 192.168.0.0/17
          FromPort: 8546
          IpProtocol: tcp
          ToPort: 8546
      VpcId: !Ref VPC
  MetricsSG:
    Type: AWS::EC2::SecurityGroup
    Properties: 
      GroupName: !Sub ${AWS::StackName}-metrics
      GroupDescription: !Sub ${AWS::StackName}-metrics
      SecurityGroupIngress:
        - CidrIp: 192.168.0.0/17
          FromPort: 6060
          IpProtocol: tcp
          ToPort: 6060
      VpcId: !Ref VPC
  EthENI:
    Type: AWS::EC2::NetworkInterface
    Properties:
      Tags:
        # tag authorizing ec2:AttachNetworkInterface in dap-geth stack
        - Key: Name
          Value: dap-geth
      GroupSet:
        - !GetAtt HttpSG.GroupId
        - !GetAtt WebSocketSG.GroupId
        - !GetAtt MetricsSG.GroupId
      SubnetId: !Ref SubnetA

Outputs:
  SubnetA:
    Value: !Ref SubnetA
    Export:
      Name: !Sub ${AWS::StackName}-subnet-a
  SubnetB:
    Value: !Ref SubnetB
    Export:
      Name: !Sub ${AWS::StackName}-subnet-b
  ListenerSG:
    Value: !GetAtt ListenerSG.GroupId
    Export:
      Name: !Sub ${AWS::StackName}-listener-sg
  DiscoverySG:
    Value: !GetAtt DiscoverySG.GroupId
    Export:
      Name: !Sub ${AWS::StackName}-discovery-sg
  HttpSG:
    Value: !GetAtt HttpSG.GroupId
    Export:
      Name: !Sub ${AWS::StackName}-http-sg
  WebSocketSG:
    Value: !GetAtt WebSocketSG.GroupId
    Export:
      Name: !Sub ${AWS::StackName}-ws-sg
  EthENI:
    Value: !GetAtt EthENI.Id
    Export:
      Name: !Sub ${AWS::StackName}-eth-eni
  EthIP:
    Value: !GetAtt EthENI.PrimaryPrivateIpAddress
    Export:
      Name: !Sub ${AWS::StackName}-eth-ip
